Working on adding in Delete Comment

--- a/source/Todo.Api.Tests/Todo.Api.Tests.csproj
+++ b/source/Todo.Api.Tests/Todo.Api.Tests.csproj
@@ -109,7 +109,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\CreateCommentControllerTests.cs" />
+    <Compile Include="Controllers\Comment\DeleteCommentControllerTests.cs" />
+    <Compile Include="Controllers\Comment\CreateCommentControllerTests.cs" />
+    <Compile Include="Controllers\DeleteCommentController.cs" />
     <Compile Include="Controllers\Todo\UpdateTodoItemControllerTests.cs" />
     <Compile Include="Controllers\Todo\DeleteTodoItemControllerTest.cs" />
     <Compile Include="Controllers\Todo\FetchTodoCollectionControllerTests.cs" />
