--- a/source/Todo.Api/Todo.Api.csproj
+++ b/source/Todo.Api/Todo.Api.csproj
@@ -112,11 +112,12 @@
     <Compile Include="App_Start\JsonFormatterConfig.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\CreateCommentController.cs" />
+    <Compile Include="Controllers\Comment\CreateCommentController.cs" />
     <Compile Include="Controllers\Todo\CreateTodoItemController.cs" />
     <Compile Include="Controllers\Todo\DeleteTodoItemController.cs" />
     <Compile Include="Controllers\Todo\FetchTodoItemController.cs" />
     <Compile Include="Controllers\Todo\UpdateTodoItemController.cs" />
+    <Compile Include="Controllers\Comment\DeleteCommentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
