Refactored code to use more testdata builders

--- a/source/Todo.TestUtils/Todo.TestUtils.csproj
+++ b/source/Todo.TestUtils/Todo.TestUtils.csproj
@@ -59,6 +59,8 @@
   <ItemGroup>
     <Compile Include="CreateCommentUseCaseTestDataBuilder.cs" />
     <Compile Include="CreateTodoUseCaseTestDataBuilder.cs" />
+    <Compile Include="DeleteCommentUseCaseTestDataBuilder.cs" />
+    <Compile Include="DeleteTodoItemUseCaseTestDataBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
