--- a/source/Todo.UseCase.Tests/packages.config
+++ b/source/Todo.UseCase.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="NExpect" version="1.0.72" targetFramework="net461" />
   <package id="NSubstitute" version="2.0.3" targetFramework="net461" />
   <package id="NSubstituteAutoMocker" version="1.1.0.0" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
