Failing test for melding comments with todo items

--- a/source/Todo.Domain/Todo.Domain.csproj
+++ b/source/Todo.Domain/Todo.Domain.csproj
@@ -70,6 +70,7 @@
     <Compile Include="UseCaseMessages\DeleteCommentOutput.cs" />
     <Compile Include="UseCaseMessages\DeleteTodoItemInput.cs" />
     <Compile Include="UseCaseMessages\DeleteTodoItemOutput.cs" />
+    <Compile Include="UseCaseMessages\FetchTodoCommentOutput.cs" />
     <Compile Include="UseCaseMessages\FetchTodoItemOutput.cs" />
     <Compile Include="UseCaseMessages\UpdateTodoItemInput.cs" />
     <Compile Include="UseCaseMessages\UpdateTodoItemOutput.cs" />
