Got all test passing again - Really need to remove duplication between all the auto mapper stuff
Also need to fix up test, one test file has 1 test with 100+ lines of setup

--- a/source/Todo.UseCase.Tests/Todo.UseCase.Tests.csproj
+++ b/source/Todo.UseCase.Tests/Todo.UseCase.Tests.csproj
@@ -80,6 +80,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Todo.AutoMapper\Todo.AutoMapper.csproj">
+      <Project>{1A9891DB-682A-4A49-B51D-ED7818480D81}</Project>
+      <Name>Todo.AutoMapper</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Todo.Data\Todo.Data.csproj">
       <Project>{7F09479A-6286-494F-BBC7-207459CEC17F}</Project>
       <Name>Todo.Data</Name>
@@ -99,6 +103,10 @@
     <ProjectReference Include="..\Todo.UseCase\Todo.UseCase.csproj">
       <Project>{fa0e355e-5ebf-43ed-8b29-2125d8c42687}</Project>
       <Name>Todo.UseCase</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Todo.Utils\Todo.Extensions.csproj">
+      <Project>{4df7cb94-b2d2-49d1-8125-af13ac3804e8}</Project>
+      <Name>Todo.Extensions</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
