--- a/source/Todo.UseCase/Todo.UseCase.csproj
+++ b/source/Todo.UseCase/Todo.UseCase.csproj
@@ -75,6 +75,10 @@
       <Project>{2dc93311-fa9d-4636-9bc4-a892211e3713}</Project>
       <Name>Todo.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Todo.Utils\Todo.Extensions.csproj">
+      <Project>{4df7cb94-b2d2-49d1-8125-af13ac3804e8}</Project>
+      <Name>Todo.Extensions</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
