--- a/source/Todo.Api.Tests/Todo.Api.Tests.csproj
+++ b/source/Todo.Api.Tests/Todo.Api.Tests.csproj
@@ -131,9 +131,9 @@
       <Project>{8dc53cc0-4587-4676-a53d-dbf14ca7884f}</Project>
       <Name>Todo.Domain</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Entities\Todo.Entities.csproj">
+    <ProjectReference Include="..\Todo.Entities\Todo.DomainEntities.csproj">
       <Project>{2DC93311-FA9D-4636-9BC4-A892211E3713}</Project>
-      <Name>Todo.Entities</Name>
+      <Name>Todo.DomainEntities</Name>
     </ProjectReference>
     <ProjectReference Include="..\Todo.TestUtils\Todo.TestUtils.csproj">
       <Project>{29c7c608-2574-4f58-9d21-cd6cfc281ef0}</Project>
