--- a/source/Todo.Data/Todo.Data.csproj
+++ b/source/Todo.Data/Todo.Data.csproj
@@ -83,9 +83,9 @@
       <Project>{8dc53cc0-4587-4676-a53d-dbf14ca7884f}</Project>
       <Name>Todo.Domain</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Entities\Todo.Entities.csproj">
+    <ProjectReference Include="..\Todo.Entities\Todo.DomainEntities.csproj">
       <Project>{2DC93311-FA9D-4636-9BC4-A892211E3713}</Project>
-      <Name>Todo.Entities</Name>
+      <Name>Todo.DomainEntities</Name>
     </ProjectReference>
     <ProjectReference Include="..\Todo.Utils\Todo.Extensions.csproj">
       <Project>{4df7cb94-b2d2-49d1-8125-af13ac3804e8}</Project>
