--- a/source/Todo.Data/Todo.Data.csproj
+++ b/source/Todo.Data/Todo.Data.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\201709211227074_Comment_CreateTable.Designer.cs">
       <DependentUpon>201709211227074_Comment_CreateTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709271228483_CommentTable_AddedFkToTodoItem.cs" />
+    <Compile Include="Migrations\201709271228483_CommentTable_AddedFkToTodoItem.Designer.cs">
+      <DependentUpon>201709271228483_CommentTable_AddedFkToTodoItem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Context\TodoContext.cs" />
@@ -98,6 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709211227074_Comment_CreateTable.resx">
       <DependentUpon>201709211227074_Comment_CreateTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709271228483_CommentTable_AddedFkToTodoItem.resx">
+      <DependentUpon>201709271228483_CommentTable_AddedFkToTodoItem.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
