Refactored Domain and Boundry projects as per Brendon's feedback

--- a/source/Todo.Api.Tests/Todo.Api.Tests.csproj
+++ b/source/Todo.Api.Tests/Todo.Api.Tests.csproj
@@ -127,13 +127,13 @@
       <Project>{7aec257b-fefd-402d-bb2a-5764d6d09436}</Project>
       <Name>Todo.Api</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj">
+    <ProjectReference Include="..\Todo.Domain\Todo.Boundry.csproj">
       <Project>{8dc53cc0-4587-4676-a53d-dbf14ca7884f}</Project>
-      <Name>Todo.Domain</Name>
+      <Name>Todo.Boundry</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Entities\Todo.DomainEntities.csproj">
+    <ProjectReference Include="..\Todo.Entities\Todo.Domain.csproj">
       <Project>{2DC93311-FA9D-4636-9BC4-A892211E3713}</Project>
-      <Name>Todo.DomainEntities</Name>
+      <Name>Todo.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\Todo.TestUtils\Todo.TestUtils.csproj">
       <Project>{29c7c608-2574-4f58-9d21-cd6cfc281ef0}</Project>
