--- a/source/Todo.Data.Tests/Todo.Data.Tests.csproj
+++ b/source/Todo.Data.Tests/Todo.Data.Tests.csproj
@@ -83,13 +83,13 @@
       <Project>{7F09479A-6286-494F-BBC7-207459CEC17F}</Project>
       <Name>Todo.Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj">
+    <ProjectReference Include="..\Todo.Domain\Todo.Boundry.csproj">
       <Project>{8DC53CC0-4587-4676-A53D-DBF14CA7884F}</Project>
-      <Name>Todo.Domain</Name>
+      <Name>Todo.Boundry</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Entities\Todo.DomainEntities.csproj">
+    <ProjectReference Include="..\Todo.Entities\Todo.Domain.csproj">
       <Project>{2DC93311-FA9D-4636-9BC4-A892211E3713}</Project>
-      <Name>Todo.DomainEntities</Name>
+      <Name>Todo.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\Todo.Utils\Todo.Extensions.csproj">
       <Project>{4df7cb94-b2d2-49d1-8125-af13ac3804e8}</Project>
