--- a/source/Todo.Data/Todo.Data.csproj
+++ b/source/Todo.Data/Todo.Data.csproj
@@ -83,13 +83,13 @@
       <Project>{1A9891DB-682A-4A49-B51D-ED7818480D81}</Project>
       <Name>Todo.AutoMapper</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj">
+    <ProjectReference Include="..\Todo.Domain\Todo.Boundry.csproj">
       <Project>{8dc53cc0-4587-4676-a53d-dbf14ca7884f}</Project>
-      <Name>Todo.Domain</Name>
+      <Name>Todo.Boundry</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Entities\Todo.DomainEntities.csproj">
+    <ProjectReference Include="..\Todo.Entities\Todo.Domain.csproj">
       <Project>{2DC93311-FA9D-4636-9BC4-A892211E3713}</Project>
-      <Name>Todo.DomainEntities</Name>
+      <Name>Todo.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\Todo.Utils\Todo.Extensions.csproj">
       <Project>{4df7cb94-b2d2-49d1-8125-af13ac3804e8}</Project>
