--- a/source/Todo.Domain.Tests/Todo.Domain.Tests.csproj
+++ b/source/Todo.Domain.Tests/Todo.Domain.Tests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{01D0EC3F-C554-4803-B4F5-644C386F723A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Todo.DomainEntities.Tests</RootNamespace>
-    <AssemblyName>Todo.DomainEntities.Tests</AssemblyName>
+    <RootNamespace>Todo.Domain.Tests</RootNamespace>
+    <AssemblyName>Todo.Domain.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -63,9 +63,9 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Todo.Entities\Todo.DomainEntities.csproj">
+    <ProjectReference Include="..\Todo.Entities\Todo.Domain.csproj">
       <Project>{2dc93311-fa9d-4636-9bc4-a892211e3713}</Project>
-      <Name>Todo.DomainEntities</Name>
+      <Name>Todo.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
