--- a/source/Todo.Entities/Todo.Domain.csproj
+++ b/source/Todo.Entities/Todo.Domain.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8DC53CC0-4587-4676-A53D-DBF14CA7884F}</ProjectGuid>
+    <ProjectGuid>{2DC93311-FA9D-4636-9BC4-A892211E3713}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Todo.Domain</RootNamespace>
     <AssemblyName>Todo.Domain</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,33 +30,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TddBuddy.CleanArchitecture, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\TddBuddy.CleanArchitecture.DotNet.2.0.0\lib\net461\TddBuddy.CleanArchitecture.dll</HintPath>
-    </Reference>
-    <Reference Include="TddBuddy.CleanArchitecture.Domain, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\TddBuddy.CleanArchitecture.Domain.DotNet.2.0.0\lib\net461\TddBuddy.CleanArchitecture.Domain.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants\DomainConstants.cs" />
-    <Compile Include="Repository\ICommentRepository.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Entities\TodoComment.cs" />
+    <Compile Include="Entities\TodoItem.cs" />
     <Compile Include="UseCaseMessages\CreateCommentInput.cs" />
     <Compile Include="UseCaseMessages\CreateCommentOuput.cs" />
     <Compile Include="UseCaseMessages\CreateTodoItemInput.cs" />
@@ -70,24 +56,6 @@
     <Compile Include="UseCaseMessages\FetchTodoItemOutput.cs" />
     <Compile Include="UseCaseMessages\UpdateTodoItemInput.cs" />
     <Compile Include="UseCaseMessages\UpdateTodoItemOutput.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\ITodoRepository.cs" />
-    <Compile Include="UseCase\ICreateCommentUseCase.cs" />
-    <Compile Include="UseCase\ICreateTodoItemUseCase.cs" />
-    <Compile Include="UseCase\IDeleteCommentUseCase.cs" />
-    <Compile Include="UseCase\IDeleteTodoItemUseCase.cs" />
-    <Compile Include="UseCase\IFetchTodoCollectionUseCase.cs" />
-    <Compile Include="UseCase\IUpdateTodoItemUseCase.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Todo.Entities\Todo.DomainEntities.csproj">
-      <Project>{2dc93311-fa9d-4636-9bc4-a892211e3713}</Project>
-      <Name>Todo.DomainEntities</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
