--- a/source/Todo.TestUtils/Todo.TestUtils.csproj
+++ b/source/Todo.TestUtils/Todo.TestUtils.csproj
@@ -64,13 +64,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj">
+    <ProjectReference Include="..\Todo.Domain\Todo.Boundry.csproj">
       <Project>{8dc53cc0-4587-4676-a53d-dbf14ca7884f}</Project>
-      <Name>Todo.Domain</Name>
+      <Name>Todo.Boundry</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Entities\Todo.DomainEntities.csproj">
+    <ProjectReference Include="..\Todo.Entities\Todo.Domain.csproj">
       <Project>{2DC93311-FA9D-4636-9BC4-A892211E3713}</Project>
-      <Name>Todo.DomainEntities</Name>
+      <Name>Todo.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\Todo.UseCase\Todo.UseCase.csproj">
       <Project>{fa0e355e-5ebf-43ed-8b29-2125d8c42687}</Project>
