--- a/source/Todo.Api.Tests/packages.config
+++ b/source/Todo.Api.Tests/packages.config
@@ -16,12 +16,12 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NSubstitute" version="2.0.3" targetFramework="net461" />
   <package id="NSubstituteAutoMocker" version="1.1.0.0" targetFramework="net461" />
-  <package id="NUnit" version="3.7.1" targetFramework="net461" />
+  <package id="NUnit" version="3.8.1" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
-  <package id="SimpleInjector" version="4.0.8" targetFramework="net461" />
+  <package id="SimpleInjector" version="4.0.11" targetFramework="net452" />
   <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="4.0.0" targetFramework="net461" />
-  <package id="SimpleInjector.Integration.WebApi" version="4.0.8" targetFramework="net461" />
-  <package id="TddBuddy.CleanArchitecture.Domain.DotNet" version="2.0.0" targetFramework="net461" />
-  <package id="TddBuddy.CleanArchitecture.TestUtils.DotNet" version="1.0.3" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.0.11" targetFramework="net452" />
+  <package id="TddBuddy.CleanArchitecture.Domain.DotNet" version="2.0.1" targetFramework="net452" />
+  <package id="TddBuddy.CleanArchitecture.TestUtils.DotNet" version="1.0.3" targetFramework="net461" requireReinstallation="true" />
 </packages>
