--- a/source/Todo.Domain.Tests/packages.config
+++ b/source/Todo.Domain.Tests/packages.config
@@ -5,5 +5,5 @@
   <package id="NSubstitute" version="2.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.8.1" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
-  <package id="TddBuddy.CleanArchitecture.Domain.DotNet" version="2.0.0" targetFramework="net461" />
+  <package id="TddBuddy.CleanArchitecture.Domain.DotNet" version="2.0.0" targetFramework="net461" requireReinstallation="true" />
 </packages>
