--- a/source/Todo.Api.Tests/packages.config
+++ b/source/Todo.Api.Tests/packages.config
@@ -23,5 +23,5 @@
   <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="4.0.0" targetFramework="net461" />
   <package id="SimpleInjector.Integration.WebApi" version="4.0.11" targetFramework="net452" />
   <package id="TddBuddy.CleanArchitecture.Domain.DotNet" version="2.0.1" targetFramework="net452" />
-  <package id="TddBuddy.CleanArchitecture.TestUtils.DotNet" version="1.0.3" targetFramework="net461" requireReinstallation="true" />
+  <package id="TddBuddy.CleanArchitecture.TestUtils.DotNet" version="1.1.1" targetFramework="net452" />
 </packages>
