--- a/source/Todo.Api/packages.config
+++ b/source/Todo.Api/packages.config
@@ -15,4 +15,5 @@
   <package id="TddBuddy.CleanArchitecture.Domain.DotNet" version="2.0.1" targetFramework="net452" />
   <package id="TddBuddy.CleanArchitecture.DotNet" version="2.0.1" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
 </packages>
