--- a/source/Todo.Boundry/Todo.Boundry.csproj
+++ b/source/Todo.Boundry/Todo.Boundry.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Todo\Delete\DeleteTodoItemOutput.cs" />
     <Compile Include="Todo\Delete\IDeleteTodoItemUseCase.cs" />
     <Compile Include="Todo\Fetch\FetchTodoCommentOutput.cs" />
-    <Compile Include="Todo\Fetch\FetchTodoItemOutput.cs" />
+    <Compile Include="Todo\Fetch\TodoItemTo.cs" />
     <Compile Include="Todo\Fetch\IFetchTodoCollectionUseCase.cs" />
     <Compile Include="Todo\Update\IUpdateTodoItemUseCase.cs" />
     <Compile Include="Todo\Update\UpdateTodoItemInput.cs" />
