--- a/source/Todo.Controllers.Web.Tests/Todo.Controllers.Web.Tests.csproj
+++ b/source/Todo.Controllers.Web.Tests/Todo.Controllers.Web.Tests.csproj
@@ -100,11 +100,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TddBuddy.CleanArchitecture.Domain, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\TddBuddy.CleanArchitecture.Domain.DotNet.2.0.1\lib\net452\TddBuddy.CleanArchitecture.Domain.dll</HintPath>
+    <Reference Include="TddBuddy.CleanArchitecture.Domain, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\TddBuddy.CleanArchitecture.Domain.DotNet.2.5.0\lib\net452\TddBuddy.CleanArchitecture.Domain.dll</HintPath>
     </Reference>
-    <Reference Include="TddBuddy.CleanArchitecture.TestUtils, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\TddBuddy.CleanArchitecture.TestUtils.DotNet.1.2.0\lib\net452\TddBuddy.CleanArchitecture.TestUtils.dll</HintPath>
+    <Reference Include="TddBuddy.CleanArchitecture.TestUtils, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\TddBuddy.CleanArchitecture.TestUtils.DotNet.1.2.1\lib\net452\TddBuddy.CleanArchitecture.TestUtils.dll</HintPath>
+    </Reference>
+    <Reference Include="WebApi.ControllerSuffixRemover, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebApi.ControllerSuffixRemover.1.0.0\lib\net452\WebApi.ControllerSuffixRemover.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
