--- a/source/Todo.Boundry/Todo.Boundary.csproj
+++ b/source/Todo.Boundry/Todo.Boundary.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Todo\Create\CreateTodoInput.cs" />
     <Compile Include="Todo\Create\CreateTodoOutput.cs" />
+    <Compile Include="Todo\Fetch\Filtered\IFetchFilteredTodoUseCase.cs" />
+    <Compile Include="Todo\Fetch\Filtered\TodoFilterInput.cs" />
     <Compile Include="Todo\ITodoRepository.cs" />
     <Compile Include="Comment\Create\ICreateCommentUseCase.cs" />
     <Compile Include="Todo\Create\ICreateTodoUseCase.cs" />
