--- a/source/Todo.Controllers.Web.Tests/Todo.Controllers.Web.Tests.csproj
+++ b/source/Todo.Controllers.Web.Tests/Todo.Controllers.Web.Tests.csproj
@@ -113,11 +113,11 @@
   <ItemGroup>
     <Compile Include="Comment\DeleteCommentTests.cs" />
     <Compile Include="Comment\CreateCommentTests.cs" />
-    <Compile Include="Todo\FetchFilteredTodoItemsTests.cs" />
-    <Compile Include="Todo\UpdateTodoItemTests.cs" />
-    <Compile Include="Todo\DeleteTodoItemTest.cs" />
-    <Compile Include="Todo\FetchAllTodoItemsTests.cs" />
-    <Compile Include="Todo\CreateTodoItemTests.cs" />
+    <Compile Include="Todo\FetchFilteredTodoTests.cs" />
+    <Compile Include="Todo\UpdateTodoTests.cs" />
+    <Compile Include="Todo\DeleteTodoTest.cs" />
+    <Compile Include="Todo\FetchAllTodoTests.cs" />
+    <Compile Include="Todo\CreateTodoTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
