Restructured Todo.Data to match existing project layout around concept not technologies

--- a/source/Todo.Data.Tests/Todo.Data.Tests.csproj
+++ b/source/Todo.Data.Tests/Todo.Data.Tests.csproj
@@ -64,11 +64,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\CommentEfModelTests.cs" />
-    <Compile Include="Entities\TodoItemEfModelTests.cs" />
+    <Compile Include="Comment\CommentEntityFrameworkModelTests.cs" />
+    <Compile Include="Todo\TodoItemEntityFrameworkModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\CommentRepositoryTests.cs" />
-    <Compile Include="Repositories\TodoRepositoryTests.cs" />
+    <Compile Include="Comment\CommentRepositoryTests.cs" />
+    <Compile Include="Todo\TodoRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
