--- a/source/Todo.Controllers.Web.Tests/packages.config
+++ b/source/Todo.Controllers.Web.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
@@ -24,5 +25,6 @@
   <package id="SimpleInjector.Integration.WebApi" version="4.0.11" targetFramework="net452" />
   <package id="TddBuddy.CleanArchitecture.Domain.DotNet" version="3.1.3" targetFramework="net452" />
   <package id="TddBuddy.CleanArchitecture.TestUtils.DotNet" version="1.2.1" targetFramework="net452" />
+  <package id="TddBuddy.SpeedySqlLocalDb" version="1.1.4" targetFramework="net452" />
   <package id="WebApi.ControllerSuffixRemover" version="1.0.0" targetFramework="net452" />
 </packages>
