--- a/source/Todo.Domain/packages.config
+++ b/source/Todo.Domain/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="6.1.1" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="NUnit" version="3.7.1" targetFramework="net452" />
   <package id="TddBuddy.CleanArchitecture.Domain.DotNet" version="3.1.3" targetFramework="net452" />
   <package id="TddBuddy.DateTimeExtensions.DotNet" version="1.0.0" targetFramework="net452" />
+  <package id="TddBuddy.SpeedySqlLocalDb" version="1.1.4" targetFramework="net452" />
 </packages>
